feat: save progress 1. add layer depth feature 2. update EnumWiget 3. add ClickGui 4. add Baritone support , BaritoneFix and related mixins